--- a/Games.css
+++ b/Games.css
@@ -28,7 +28,7 @@ h1{
     width: 430px;
 }
 a{
-    text-decoration: double;
+    text-decoration: none;
 }
 .first{
     height: 180px;
@@ -56,10 +56,12 @@ a{
 .sec1 img{
     width: 100%;
     height: 100%;
-     ;
+     
 
 }
 .sec2{
     border: 1px black solid;
-    padding-left: 0%;
+    margin: 5px;
+    padding-left: 5px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
