--- a/Games.css
+++ b/Games.css
@@ -46,8 +46,8 @@ a{
 }
 .sec1{
     margin: 3px;
-    width: 20px;
-    height: 20px;
+    width: 40px;
+    height:45px;
     border: 1px black solid;
     border-radius: 10px;
     overflow: hidden;
@@ -55,7 +55,7 @@ a{
 }
 
 .sec2{
-    
+    color: crimson;
     margin: 5px;
     padding-left: 5px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
