--- a/Games.css
+++ b/Games.css
@@ -19,7 +19,7 @@ h1{
     width: 420px;
     border: .5px black solid;
     border-radius: 18px;
-    background-color:wheat;
+    background-color:rgb(247, 234, 210);
     cursor: pointer;
     overflow: hidden;
     transition: width 1s;
@@ -42,12 +42,12 @@ a{
     padding:10px;
     display: flex;
     justify-content:left ;
-    /*float:left;*/
+   
 }
 .sec1{
     margin: 3px;
-    width: 40px;
-    height:45px;
+    width: 11%;
+    height:80%;
     border: 1px black solid;
     border-radius: 10px;
     overflow: hidden;
@@ -55,7 +55,7 @@ a{
 }
 
 .sec2{
-    color: crimson;
+    color:peru;
     margin: 5px;
     padding-left: 5px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
