--- a/Games.css
+++ b/Games.css
@@ -46,8 +46,8 @@ a{
 }
 .sec1{
     margin: 3px;
-    width: 11%;
-    height:80%;
+    width: 45px;
+    height:50px;
     border: 1px black solid;
     border-radius: 10px;
     overflow: hidden;
