--- a/Games.css
+++ b/Games.css
@@ -9,7 +9,7 @@ flex-wrap: wrap;
 justify-content:space-evenly;
 align-items: center;
 }
-h1{
+.h1{
     margin: 15px 15px 0px;
     font-family: Arial, Helvetica, sans-serif;
 }
